Use JEP 269 Collection factory methods.